--- a/index.html
+++ b/index.html
@@ -2,75 +2,167 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Golf Atlas Map</title>
+  <title>Golf Atlas – Courses</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet"
-        href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-        crossorigin="">
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-          integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-          crossorigin=""></script>
+
+  <!-- Leaflet CSS/JS -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin=""
+  />
+  <script
+    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+    crossorigin=""
+  ></script>
+
+  <!-- Papa Parse (CSV) -->
   <script src="https://unpkg.com/papaparse@5.4.1/papaparse.min.js"></script>
+
   <style>
+    :root { --font: system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif; }
     html, body { height: 100%; margin: 0; }
-    #map { height: 100vh; width: 100%; }
-    .titlebar { padding: 10px 12px; font-family: system-ui, Segoe UI, Roboto, Arial, sans-serif; }
+    body { font-family: var(--font); }
+    #map { height: calc(100vh - 64px); width: 100%; }
+    .titlebar {
+      padding: 10px 12px;
+      display: flex; align-items: baseline; gap: 10px; flex-wrap: wrap;
+      border-bottom: 1px solid #eee;
+    }
+    .titlebar h1 { margin: 0; font-size: 18px; font-weight: 700; }
+    .titlebar small { color: #666; }
+    /* popup polish */
+    .leaflet-popup-content { margin: 10px 14px; }
+    .leaflet-popup-content-wrapper { border-radius: 12px; }
   </style>
 </head>
 <body>
   <div class="titlebar">
-    <h1 style="margin:0;">Golf Atlas – Courses</h1>
-    <small>Data source: <code>?csv=...</code> URL parameter</small>
+    <h1>Golf Atlas – Courses</h1>
+    <small>Provide your data with <code>?csv=ENCODED_CSV_URL</code></small>
   </div>
   <div id="map"></div>
 
   <script>
+    // ---- helpers ----
     const getParam = (k) => new URL(location.href).searchParams.get(k);
-    const map = L.map('map', { scrollWheelZoom: true });
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
-      { attribution: '&copy; OpenStreetMap contributors' }).addTo(map);
-    map.setView([39.5,-98.5], 4); // default USA view
+    const val = (x) => (x ?? "").toString().trim();
+    const num = (x) => (typeof x === "number" ? x : Number(x));
 
-    const csvUrl = getParam('csv');
+    // initialize map
+    const map = L.map("map", { scrollWheelZoom: true });
+    L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+      attribution: "&copy; OpenStreetMap contributors"
+    }).addTo(map);
+    map.setView([39.5, -98.5], 4); // default USA view (shows something even if CSV fails)
+
+    // csv url
+    const csvUrl = getParam("csv");
     if (!csvUrl) {
-      console.warn('Add ?csv=<encoded csv url> to your page URL.');
+      console.warn("No ?csv= URL provided. Add ?csv=<encoded csv url> to your page URL.");
     } else {
       Papa.parse(csvUrl, {
-        download: true, header: true, dynamicTyping: true, skipEmptyLines: true,
-        complete: ({data}) => {
-          const bounds = L.latLngBounds(); let count = 0;
-          data.forEach(r => {
+        download: true,
+        header: true,
+        dynamicTyping: true,
+        skipEmptyLines: true,
+        complete: ({ data }) => {
+          if (!Array.isArray(data) || data.length === 0) {
+            console.warn("CSV loaded but empty.");
+            return;
+          }
+
+          const bounds = L.latLngBounds();
+          let plotted = 0;
+
+          data.forEach((r) => {
+            // flexible column names for lat/lon
             const lat = r.Latitude ?? r.latitude ?? r.lat;
             const lon = r.Longitude ?? r.longitude ?? r.lng ?? r.lon;
-            if (typeof lat === 'number' && typeof lon === 'number' && !isNaN(lat) && !isNaN(lon)) {
-              const name = r['Course Name'] || 'Unknown';
-              const resort = r['Course Resort'] || '';
-              const city = r.City || '';
-              const state = r['State/Province'] || '';
-              const fee = r['Cost per Course (Green Fee Range)'] || '';
-              const lodging = r['Lodging On-Site (Yes/No)'] || '';
-              const url = r['Website URL'] || '';
-              const phone = r['Phone'] || '';
-              const pop = `
-                <div style="min-width:220px">
-                  <strong>${name}</strong>${resort ? ` <br/><em>${resort}</em>` : ''}
-                  <div>${city}${city && state ? ', ' : ''}${state}</div>
-                  ${fee ? `<div><b>Fees:</b> ${fee}</div>` : ''}
-                  ${lodging ? `<div><b>Lodging:</b> ${lodging}</div>` : ''}
-                  ${phone ? `<div><b>Phone:</b> ${phone}</div>` : ''}
-                  ${url ? `<div><a href="${url}" target="_blank" rel="noopener">Website</a></div>` : ''}
-                </div>`;
-              L.marker([lat, lon]).addTo(map).bindPopup(pop);
-              bounds.extend([lat, lon]); count++;
+
+            const latN = num(lat), lonN = num(lon);
+            if (!isFinite(latN) || !isFinite(lonN)) return;
+
+            // pull all your fields
+            const name       = val(r["Course Name"] || r.name);
+            const resort     = val(r["Course Resort"]);
+            const city       = val(r["City"]);
+            const state      = val(r["State/Province"]);
+            const par        = val(r["Par"]);
+            const yardage    = val(r["Yardage (Back Tees)"]);
+            const arch       = val(r["Architect(s)"]);
+            const year       = val(r["Year Opened"]);
+            const fees       = val(r["Cost per Course (Green Fee Range)"]);
+            const walking    = val(r["Walking Friendly (Yes/No)"]);
+            const caddie     = val(r["Caddie/Cart Policy"]);
+            const practice   = val(r["Practice Facilities (Range/Short Game)"]);
+            const dining     = val(r["On-site Dining (Notes)"]);
+            const lodgingYN  = val(r["Lodging On-Site (Yes/No)"]);
+            const lodgingDet = val(r["Lodging Details & Typical Price"]);
+            const airports   = val(r["Nearby Airports (Distance)"]);
+            const website    = val(r["Website URL"]);
+            const phone      = val(r["Phone"]);
+            const ranking    = val(r["Ranking (Consensus or Golf Digest Top 100)"]);
+
+            // build polished popup
+            const courseLine = [par && `Par ${par}`, yardage && `${yardage} yds`]
+              .filter(Boolean).join(" • ");
+
+            const lines = [];
+            if (courseLine) lines.push(`<div><b>Course:</b> ${courseLine}</div>`);
+            if (arch)       lines.push(`<div><b>Architect(s):</b> ${arch}</div>`);
+            if (year)       lines.push(`<div><b>Year Opened:</b> ${year}</div>`);
+            if (ranking)    lines.push(`<div><b>Ranking:</b> ${ranking}</div>`);
+            if (fees)       lines.push(`<div><b>Fees:</b> ${fees}</div>`);
+            if (walking)    lines.push(`<div><b>Walking:</b> ${walking}</div>`);
+            if (caddie)     lines.push(`<div><b>Caddie/Cart:</b> ${caddie}</div>`);
+            if (practice)   lines.push(`<div><b>Practice:</b> ${practice}</div>`);
+            if (dining)     lines.push(`<div><b>Dining:</b> ${dining}</div>`);
+            if (lodgingYN || lodgingDet) {
+              lines.push(`<div><b>Lodging:</b> ${[lodgingYN, lodgingDet].filter(Boolean).join(" — ")}</div>`);
             }
+            if (airports)   lines.push(`<div><b>Airports:</b> ${airports}</div>`);
+            if (website)    lines.push(`<div style="margin-top:6px"><a href="${website}" target="_blank" rel="noopener">Website</a></div>`);
+            if (phone)      lines.push(`<div>${phone}</div>`);
+
+            const popupHtml = `
+              <div style="min-width:260px; max-width:360px;">
+                <div style="font-weight:700">${name || "Unknown"}</div>
+                ${resort ? `<div style="color:#444"><em>${resort}</em></div>` : ``}
+                <div style="margin:6px 0 8px 0; color:#333">
+                  ${[city, state].filter(Boolean).join(", ")}
+                </div>
+                <div style="font-size:13px; line-height:1.35; max-height:260px; overflow:auto; padding-right:4px;">
+                  ${lines.join("")}
+                </div>
+              </div>
+            `;
+
+            const marker = L.marker([latN, lonN]).addTo(map).bindPopup(popupHtml);
+            // quick hover tooltip
+            if (name) marker.bindTooltip(name, { direction: "top", offset: [0, -8] });
+
+            bounds.extend([latN, lonN]);
+            plotted++;
           });
-          if (count) map.fitBounds(bounds.pad(0.15));
-          else console.warn('CSV loaded but no valid Latitude/Longitude found.');
+
+          if (plotted > 0) {
+            map.fitBounds(bounds.pad(0.15));
+          } else {
+            console.warn("CSV loaded but no valid Latitude/Longitude found.");
+          }
         },
-        error: (e) => { console.error('CSV load error:', e); alert('Could not load CSV. See console.'); }
+        error: (e) => {
+          console.error("CSV load error:", e);
+          alert("Could not load CSV. Open DevTools → Console for details.");
+        }
       });
     }
+
+    // quick debug toggle: add &debug=1 to URL
+    if (getParam("debug") === "1") console.log("Debug ON:", location.href);
   </script>
 </body>
 </html>
